{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 160,
  "lineage": "90251ce4-0bad-2678-0271-5bbe3a09a54e",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lambda",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:security-group/sg-084607a684f17fab5",
            "description": "SG for Lambda ENIs in private subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS to VPC endpoints (gateway + interface)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-084607a684f17fab5",
            "ingress": [],
            "name": "oanhlab-prod-lambda-sg",
            "name_prefix": "",
            "owner_id": "905418238956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-lambda-sg",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-lambda-sg",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-025abd929b741da91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "vpce",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:security-group/sg-0c40787fbf7d52b0d",
            "description": "SG for interface VPC endpoints",
            "egress": [],
            "id": "sg-0c40787fbf7d52b0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS from Lambda SG (via CIDR)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "oanhlab-prod-vpce-sg",
            "name_prefix": "",
            "owner_id": "905418238956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-vpce-sg",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-vpce-sg",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-025abd929b741da91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lambda-out-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:security-group-rule/sgr-0b3aa8557266d698d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS to VPC endpoints (gateway + interface)",
            "from_port": 443,
            "id": "sgr-0b3aa8557266d698d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-084607a684f17fab5",
            "security_group_rule_id": "sgr-0b3aa8557266d698d",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpce-in-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:security-group-rule/sgr-0d419c5d1068c159e",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from Lambda SG (via CIDR)",
            "from_port": 443,
            "id": "sgr-0d419c5d1068c159e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c40787fbf7d52b0d",
            "security_group_rule_id": "sgr-0d419c5d1068c159e",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:route-table/rtb-010c26974dbe2c322",
            "id": "rtb-010c26974dbe2c322",
            "owner_id": "905418238956",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-vpc-private-rt",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-vpc-private-rt",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-025abd929b741da91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lambda-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc2156febabf862c",
            "route_table_id": "rtb-010c26974dbe2c322",
            "subnet_id": "subnet-000d2aa44421f9b07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "lambda-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f8fb0099198795e",
            "route_table_id": "rtb-010c26974dbe2c322",
            "subnet_id": "subnet-08466833fbbd83127"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lambda-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:subnet/subnet-000d2aa44421f9b07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d2aa44421f9b07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418238956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "lambda-a",
              "Owner": "OanhTTT",
              "Project": "oanhlab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "lambda-a",
              "Owner": "OanhTTT",
              "Project": "oanhlab",
              "Tier": "private"
            },
            "vpc_id": "vpc-025abd929b741da91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "lambda-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:subnet/subnet-08466833fbbd83127",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08466833fbbd83127",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418238956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "lambda-b",
              "Owner": "OanhTTT",
              "Project": "oanhlab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "lambda-b",
              "Owner": "OanhTTT",
              "Project": "oanhlab",
              "Tier": "private"
            },
            "vpc_id": "vpc-025abd929b741da91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:vpc/vpc-025abd929b741da91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3c05f72e9a98e79",
            "default_route_table_id": "rtb-0d95224e2d9959c63",
            "default_security_group_id": "sg-09ea5dd42468c3470",
            "dhcp_options_id": "dopt-06d687f01ccd3268f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025abd929b741da91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d95224e2d9959c63",
            "owner_id": "905418238956",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-vpc",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oanhlab-prod-vpc",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:vpc-endpoint/vpce-0ce5f05cd764b71fe",
            "cidr_blocks": [
              "35.71.118.0/25",
              "52.94.11.0/24",
              "35.71.118.128/26"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ce5f05cd764b71fe",
            "ip_address_type": "ipv4",
            "owner_id": "905418238956",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-67a5400e",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-010c26974dbe2c322"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.dynamodb",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-dynamodb",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-dynamodb",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-025abd929b741da91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:vpc-endpoint/vpce-0d8c99a1e4167a3bf",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "3.5.148.0/22",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d8c99a1e4167a3bf",
            "ip_address_type": "ipv4",
            "owner_id": "905418238956",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-010c26974dbe2c322"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-s3",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-s3",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-025abd929b741da91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:vpc-endpoint/vpce-0efaadb0121b9372d",
            "dns_entry": [
              {
                "dns_name": "vpce-0efaadb0121b9372d-owxa55v7.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0efaadb0121b9372d-owxa55v7-ap-southeast-1a.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0efaadb0121b9372d-owxa55v7-ap-southeast-1b.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "kms.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0886486BIIPRMFGSISE"
              },
              {
                "dns_name": "kms.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z08865042AY5B4R08ZLAI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0efaadb0121b9372d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0eb2a44d6427c51f1",
              "eni-0fccd64909ec257a1"
            ],
            "owner_id": "905418238956",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c40787fbf7d52b0d"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.kms",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.6",
                "subnet_id": "subnet-000d2aa44421f9b07"
              },
              {
                "ipv4": "10.0.2.58",
                "subnet_id": "subnet-08466833fbbd83127"
              }
            ],
            "subnet_ids": [
              "subnet-000d2aa44421f9b07",
              "subnet-08466833fbbd83127"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-kms",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-kms",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-025abd929b741da91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418238956:vpc-endpoint/vpce-0841ec9bc56d3db3f",
            "dns_entry": [
              {
                "dns_name": "vpce-0841ec9bc56d3db3f-fln8wgjx.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0841ec9bc56d3db3f-fln8wgjx-ap-southeast-1a.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0841ec9bc56d3db3f-fln8wgjx-ap-southeast-1b.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0997320QGW9069U0A55"
              },
              {
                "dns_name": "logs.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z06932252MU15Q5CPS9NW"
              },
              {
                "dns_name": "streaming-logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0693941WQYU1IRQFTQH"
              },
              {
                "dns_name": "streaming-logs.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z08855112YGSRYIUSPM5D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0841ec9bc56d3db3f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d5cde0f5f04b064f",
              "eni-0ff08261d3b85fa46"
            ],
            "owner_id": "905418238956",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c40787fbf7d52b0d"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.logs",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.115",
                "subnet_id": "subnet-000d2aa44421f9b07"
              },
              {
                "ipv4": "10.0.2.66",
                "subnet_id": "subnet-08466833fbbd83127"
              }
            ],
            "subnet_ids": [
              "subnet-000d2aa44421f9b07",
              "subnet-08466833fbbd83127"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-logs",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "vpce-logs",
              "Owner": "OanhTTT",
              "Project": "oanhlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-025abd929b741da91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}